# python-accident-data

./: README.md  accident-list-001.py  accident-list-002-excel.py  accident-list.py  accidents_data.xlsx  dongjak.json  i.py  pyproject.toml  동작-사고정보.cmd
